// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section.svelte > should render using default props 1`] = `
<div>
  <details
    class=""
    open=""
  >
    <summary>
      Section
    </summary>
     
    <field-layout
      class="vertical"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using props 1`] = `
<div>
  <details
    class=""
  >
    <summary>
      Section Title
    </summary>
     
    <field-layout
      class="vertical"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using props 2`] = `
<div>
  <details
    class=""
  >
    <summary>
      custom
    </summary>
     
    <field-layout
      class="vertical"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using specified class 1`] = `
<div>
  <details
    class="custom-class"
    open=""
  >
    <summary>
      Section
    </summary>
     
    <field-layout
      class="vertical"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using specified class 2`] = `
<div>
  <details
    class="custom-class-2"
    open=""
  >
    <summary>
      Section
    </summary>
     
    <field-layout
      class="vertical"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using specified type 1`] = `
<div>
  <details
    class=""
    open=""
  >
    <summary>
      Section
    </summary>
     
    <field-layout
      class="horizontal"
    />
  </details>
</div>
`;

exports[`Section.svelte > should render using specified type 2`] = `
<div>
  <details
    class=""
    open=""
  >
    <summary>
      Section
    </summary>
     
    <field-layout
      class="section"
    />
  </details>
</div>
`;
